[package]
name = "risk-atlas-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
config = "0.15.6"
flatgeobuf = "4.6.0"
geojson = "0.24.2"
geozero = {version = "0.14.0"}
once_cell = "1.20.2"
reqwest = {version = "0.12.15", features = ["json"]}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
sqlx = {version = "0.8.3", features = ["runtime-tokio", "postgres"]}
tokio = {version = "1.43.0", features = ["rt-multi-thread", "macros"]}
tower = "0.5.2"
tower-http = {version = "0.6.2", features = ["cors"]}
